--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body, html {
 }
 
 #github2 {
-  color: black;
   padding: 25px;
 }
 
@@ -79,11 +78,26 @@ text-transform: uppercase;
   font-size: 2rem;
 }
 
+.get-in-touch {
+text-align: left;
+width: 80%;
+padding: 40px 0px;
+}
+
+.get-in-touch p {
+  font-size: 1.5rem;
+}
+
 .container {
   width: 100%;
   margin: 50px auto;
   background-color: black;
   padding: 30px;
+  color: white;
+}
+
+.message h2 {
+text-align: left;
 }
 
 .heading {
@@ -91,6 +105,13 @@ text-transform: uppercase;
   text-align: center;
   font-size: 30px;
   color: white;
+}
+
+#icon1, #icon2 {
+float: left;
+margin: 0;
+padding: 0;
+padding-right: 5px;
 }
 
 .row {
@@ -102,11 +123,12 @@ text-transform: uppercase;
 
 .card {
   width: 20%;
-  background: #fff;
+  background: rgb(181, 82, 82);
   margin-bottom: 10px;
   transition: 0.3s;
   margin: 20px;
   border-radius: 25px;
+  color: white;
 }
 
 .card-body {
@@ -142,6 +164,72 @@ text-transform: uppercase;
   box-shadow: 0 0 40px -10px rgba(0, 0, 0, 0.25);
 }
 
+
+form {
+  width: 60vw;
+  max-width: 500px;
+  min-width: 300px;
+  margin: 0 auto;
+  padding-bottom: 2em;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+form li + li {
+  margin-top: 1em;
+}
+
+label {
+  width: 10px;
+  margin: 0.1rem 0;
+  font-size: 18px;
+}
+
+fieldset {
+  border: none;
+  padding: 2rem 0;
+}
+
+input,
+textarea {
+  font: 1em 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  width: 100%;
+  border: 1px solid rgb(34, 197, 191);
+  margin: 10px 0 0 0;
+}
+
+input[type="file"] {
+  padding: 1px 2px;
+}
+
+textarea {
+  vertical-align: top;
+  height: 5em;
+}
+
+.inline {
+  width: unset;
+  margin: 0 1em 0 0;
+  vertical-align: middle;
+}
+
+button[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: 1.1rem;
+  border-color: white;
+  min-width: 50px;
+  border: 10px;
+}
+
+
+
 @media screen and (max-width: 1000px) {
   .card {
     width: 40%;
@@ -166,9 +254,9 @@ text-transform: uppercase;
   }
 
   h1 {
-    font-size: 4.5rem;
+    font-size: 3rem;
   }
   h2 {
-    font-size: 4rem;
+    font-size: 3rem;
   }
 }
