--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
   padding: 0;
   margin: 0;
@@ -7,7 +6,7 @@
 
 body {
   background: #fefefe;
-  font-family: sans-serif;
+  font-family: 'Patrick Hand SC', cursive;
 }
 
 body, html {
@@ -21,7 +20,7 @@ body, html {
 /* The hero image */
 .hero-image {
 /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/markus-spiske-Skf7HxARcoc-unsplash.jpg");
+background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)), url("img/markus-spiske-Skf7HxARcoc-unsplash.jpg");
 
 /* Set a specific height */
 height: 40%;
@@ -49,6 +48,7 @@ letter-spacing: 2.4px;
   float: right;
   padding-right: 10px;
   padding-top: 10px;
+  height: 60px;
 }
 
 button {
@@ -60,18 +60,44 @@ button {
   width: 100px;
 }
 
+.span--1 {
+  color:rgb(28, 132, 30);
+}
+
+.span--2 {
+  color:rgb(218, 196, 0);
+}
+
+.span--3 {
+  color:rgb(0, 179, 255);
+}
+
+.span--4 {
+  color:rgb(159, 24, 255);
+}
+
+.span--5 {
+  color:rgb(72, 182, 50);
+}
+
+.span--6 {
+  color:rgb(209, 31, 31);
+  font-size: 2rem;
+}
+
 .about {
   width: 60%;
   margin: 50px auto;
 }
 
 h1 {
-font-size: 7rem;
-text-transform: uppercase;
+font-size: 3rem;
+font-family: 'Crete Round', serif;
 }
 
-.about h2 {
+h2 {
   font-size: 4rem;
+  font-family: 'Zilla Slab Highlight', cursive;
 }
 
 .about p {
@@ -80,8 +106,13 @@ text-transform: uppercase;
 
 .get-in-touch {
 text-align: left;
-width: 80%;
-padding: 40px 0px;
+width: 100%;
+margin: 50px auto;
+background-color: black;
+padding: 30px;
+color: white;
+display: grid;
+justify-content: center;
 }
 
 .get-in-touch p {
@@ -102,6 +133,7 @@ text-align: left;
 
 .heading {
   padding-top: 20px;
+  padding-bottom: 25px;
   text-align: center;
   font-size: 30px;
   color: white;
@@ -147,7 +179,7 @@ padding-right: 5px;
 }
 
 .btn1 {
-  background: purple;
+  background-image: url("img/Capture.PNG");
 }
 .btn2 {
   background: rgb(51, 154, 91);
@@ -163,7 +195,6 @@ padding-right: 5px;
   transform: scale(1.05);
   box-shadow: 0 0 40px -10px rgba(0, 0, 0, 0.25);
 }
-
 
 form {
   width: 60vw;
@@ -196,7 +227,7 @@ fieldset {
 
 input,
 textarea {
-  font: 1em 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font: 1em 'Poppins', sans-serif;
   width: 100%;
   border: 1px solid rgb(34, 197, 191);
   margin: 10px 0 0 0;
@@ -228,6 +259,45 @@ button[type="submit"] {
   border: 10px;
 }
 
+.bottomnav {
+  overflow: hidden;
+  border-top: 0.4rem black solid;
+  z-index: 100;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+}
+
+.bottomnav p {
+  margin: 0;
+  padding: 0;
+  padding-right: 30px;
+  color: rgb(255, 246, 0);
+  float: right;
+  color: black;
+  font-size: 1.5rem;
+}
+
+.bottomnav a {
+  font-family: 'Martian Mono', monospace;
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 0.5rem 2.2rem;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.bottomnav a:hover {
+  background-color:#04AA6D;
+  color: white;
+}
+
+.bottomnav a.active {
+  background-color: rgb(183, 119, 208);
+  color: white;
+}
 
 
 @media screen and (max-width: 1000px) {
@@ -235,7 +305,7 @@ button[type="submit"] {
     width: 40%;
   }
   h1 {
-    font-size: 5rem;
+    font-size: 3.5rem;
   }
 }
 
@@ -254,7 +324,7 @@ button[type="submit"] {
   }
 
   h1 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
   h2 {
     font-size: 3rem;
