--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ padding-right: 5px;
 
 .card:hover {
   transform: scale(1.05);
-  box-shadow: 0 0 40px -10px rgba(0, 0, 0, 0.25);
+  filter: hue-rotate(190deg);
 }
 
 form {
